# ticket-bot-public

./: README.md
ticket-bot2/: BOUNDARY.md  Cargo.toml  README.md
ticket-bot2/scripts/: solve_captcha.py
ticket-bot2/src/: captcha.rs  cli.rs  config.rs  cookies.rs  http_client.rs  main.rs  parser.rs  proxy.rs  tixcraft_api.rs
ticket-bot2/tests/: cli_smoke.rs
ticket-bot2/tests/fixtures/: area_page.html  game_page.html  order_page.html  ticket_page.html  verify_page.html
